--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Muli', sans-serif;
     background: #fff0fcbd;
     overflow-x: hidden;
+    scroll-behavior: smooth;
   }
   
   body:before{
